# stella_vslam

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.socket  README.md  VSlamProcess.py  entrypoint.socket.bash  index.html  keyframes.py  landmarks.py  launch.sh  requirements.txt  setinterval.py  slam_server.py  transmission.py  util.py  video_stitcher.py
.VSCodeCounter/2024-09-12_15-25-53/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2024-09-13_11-14-03/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
TiR360_Viewer_CPU/: CMakeLists.txt  install.sh
TiR360_Viewer_CPU/.devcontainer/: Dockerfile  devcontainer.json
TiR360_Viewer_CPU/Firmware_Pi/: TiR360_firmware_Pi.py
TiR360_Viewer_CPU/Start_viewer/: TiR360_viewer.py  main.py  video_stitcher.py
TiR360_Viewer_CPU/include/camera_models/: camera_model.hpp  double_sphere.hpp  extended_unified.hpp
TiR360_Viewer_CPU/include/utils/: geometry.hpp
TiR360_Viewer_CPU/src/: insta360_stitcher.cpp
TiR360_Viewer_CPU/src/camera_models/: camera_model.cpp  double_sphere.cpp  extended_unified.cpp
TiR360_Viewer_CPU/src/utils/: geometry.cpp
css/: app.css
example/: export_dense_msg_to_nerf.py
example/dense/: base.json  dense.yaml  dense_hd.yaml
example/nerf/: nerf.yaml  nerf_hd.yaml
scripts/: export_dense_msg_to_nerf.py  export_dense_msg_to_ply.py  export_sqlite3_to_nerfstudio.py
src/stella_vslam/: CMakeLists.txt  dense_module.cc  dense_module.h  mapping_module.cc  (+7 more)
(+33 files in other folders)
